unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/If_Integrated_Who_is_PSP__c.field-meta.xml
<CustomField>
    <fullName>If_Integrated_Who_is_PSP__c</fullName>
    <label>If Integrated Who is PSP?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PSP</valueSetName>
    </valueSet>
</CustomField>