unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Importance_of_Tax_Free_Understood__c.field-meta.xml
<CustomField>
    <fullName>Importance_of_Tax_Free_Understood__c</fullName>
    <inlineHelpText>Do Store Management understand the importance of Tax Free and DCC to the bottom line?</inlineHelpText>
    <label>Importance of Tax Free Understood?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>