unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Importance_of_Tax_Free_UnderstoodR__c.field-meta.xml
<CustomField>
    <fullName>Importance_of_Tax_Free_UnderstoodR__c</fullName>
    <formula>IF(TEXT(Importance_of_Tax_Free_Understood__c) = &quot;Yes&quot;, 5, 
IF(TEXT(Importance_of_Tax_Free_Understood__c) = &quot;No&quot;, 0, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importance of Tax Free UnderstoodR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>