unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Improvements_to_Customer_Journey__c.field-meta.xml
<CustomField>
    <fullName>Improvements_to_Customer_Journey__c</fullName>
    <inlineHelpText>Are there improvements you would like to make to improve the overall customer journey?</inlineHelpText>
    <label>Improvements to Customer Journey?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>