unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Improvements_to_Payments_Solution__c.field-meta.xml
<CustomField>
    <fullName>Improvements_to_Payments_Solution__c</fullName>
    <label>Improvements to Payments Solution?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>