unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Improvements_to_Refunding_Solution__c.field-meta.xml
<CustomField>
    <fullName>Improvements_to_Refunding_Solution__c</fullName>
    <label>Improvements to Refunding Solution?</label>
    <type>TextArea</type>
</CustomField>