unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Improvements_to_Touristic_Reports__c.field-meta.xml
<CustomField>
    <fullName>Improvements_to_Touristic_Reports__c</fullName>
    <inlineHelpText>Are there any improvements you would like to see to Touristic Reporting?</inlineHelpText>
    <label>Improvements to Touristic Reports?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>