unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Improvements_to_Training__c.field-meta.xml
<CustomField>
    <fullName>Improvements_to_Training__c</fullName>
    <inlineHelpText>Are there any improvements you would like to see to training?</inlineHelpText>
    <label>Improvements to Training?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>