unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Instant_Refund__c.field-meta.xml
<CustomField>
    <fullName>Instant_Refund__c</fullName>
    <inlineHelpText>Instant Refund  - Shopper receives refund in one minute</inlineHelpText>
    <label>Instant Refund?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>