unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Instant_Refund_to_Other_Wallets__c.field-meta.xml
<CustomField>
    <fullName>Instant_Refund_to_Other_Wallets__c</fullName>
    <label>Instant Refund to Other Wallets?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>