unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Integrated_or_Stand_Alone__c.field-meta.xml
<CustomField>
    <fullName>Integrated_or_Stand_Alone__c</fullName>
    <label>Integrated or Standalone?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Integrated</fullName>
            </value>
            <value>
                <fullName>Standalone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>