unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Is_Back_up_Offline_or_Online__c.field-meta.xml
<CustomField>
    <fullName>Is_Back_up_Offline_or_Online__c</fullName>
    <label>Is Back-up Offline or Online?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Offline</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>No Backup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>