unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Is_the_Till_Solution_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Is_the_Till_Solution_Mobile__c</fullName>
    <inlineHelpText>If standalone - fixed desktop or mobile terminals?</inlineHelpText>
    <label>Is the Till Solution Mobile?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>