unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Issue_Forms_When_Offline__c.field-meta.xml
<CustomField>
    <fullName>Issue_Forms_When_Offline__c</fullName>
    <inlineHelpText>If using an online solution can they still issue forms when offline?</inlineHelpText>
    <label>Issue Forms When Offline?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>