unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Issued_at_Till_or_Central_Location__c.field-meta.xml
<CustomField>
    <fullName>Issued_at_Till_or_Central_Location__c</fullName>
    <inlineHelpText>Forms issued at till point or central location?</inlineHelpText>
    <label>Issued at Till or Central Location?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Till Point</fullName>
            </value>
            <value>
                <fullName>Central Location</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>