unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Issues__c.field-meta.xml
<CustomField>
    <fullName>Issues__c</fullName>
    <label>Issues When Processing CUP?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>