unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Issues_with_Refunds_at_Airport__c.field-meta.xml
<CustomField>
    <fullName>Issues_with_Refunds_at_Airport__c</fullName>
    <inlineHelpText>Do they experience issues with customers obtaining refunds at the airport?</inlineHelpText>
    <label>Issues with Refunds at Airport?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>