unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Last_Refresh__c.field-meta.xml
<CustomField>
    <fullName>Last_Refresh__c</fullName>
    <label>Last Refresh</label>
    <type>DateTime</type>
</CustomField>