unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Lifetime_Value_Approach__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Value_Approach__c</fullName>
    <inlineHelpText>Do you have an approach for growing aftersales or growing the Lifetime Value of the Customer?</inlineHelpText>
    <label>Lifetime Value Approach?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>