unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Lifetime_Value_ApproachR__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Value_ApproachR__c</fullName>
    <formula>IF(TEXT(Lifetime_Value_Approach__c) = &quot;Yes&quot;, 5, 
IF(TEXT(Lifetime_Value_Approach__c) = &quot;No&quot;, 0.5, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lifetime Value ApproachR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>