unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Loyalty_Programme_for_Customers_Web__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Programme_for_Customers_Web__c</fullName>
    <inlineHelpText>Any Loyalty Programme for Customers? With web access?</inlineHelpText>
    <label>Loyalty Programme for Customers? Web?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes - Web Access</fullName>
            </value>
            <value>
                <fullName>Yes - No Web Access</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>