unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Mandatory_Data_Required_by_TF_Provider__c.field-meta.xml
<CustomField>
    <fullName>Mandatory_Data_Required_by_TF_Provider__c</fullName>
    <inlineHelpText>What Data is Mandated by TF Provider to be Captured at POS?</inlineHelpText>
    <label>Mandatory Data Required by TF Provider</label>
    <type>TextArea</type>
</CustomField>