unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Marketing_Alignment__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Alignment__c</fullName>
    <inlineHelpText>Does your Tax Free Supplier understand your Business and Brand Objectives and support you with a mutually agreed marketing plan which drives your key Touristic Objectives?</inlineHelpText>
    <label>Marketing Alignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>