unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Marketing_AlignmentR__c.field-meta.xml
<CustomField>
    <fullName>Marketing_AlignmentR__c</fullName>
    <formula>IF(TEXT(Marketing_Alignment__c) = &quot;Yes&quot;, 5, 
IF(TEXT(Marketing_Alignment__c) = &quot;No&quot;, 0, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing AlignmentR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>