unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Marketing_Materials_Positive_Influence__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Materials_Positive_Influence__c</fullName>
    <inlineHelpText>Do the current marketing materials influence the customer experience positively?</inlineHelpText>
    <label>Marketing Materials Positive Influence?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>