unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Marketing_Materials_Positive_InfluenceR__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Materials_Positive_InfluenceR__c</fullName>
    <formula>IF(TEXT(Marketing_Materials_Positive_Influence__c) = &quot;Yes&quot;, 5, 
IF(TEXT(Marketing_Materials_Positive_Influence__c) = &quot;No&quot;, 0, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Materials Positive InfluenceR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>