unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Marketing_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Subtotal__c</fullName>
    <formula>Nature_of_Marketing_SupportR__c +  Do_you_pay_for_Marketing_SupportR__c +  Strength_of_Marketing_ServicesR__c +  Materials_from_Tax_Free_ProviderR__c +  Marketing_AlignmentR__c +  Brand_Promoted_on_Tax_Free_WebsiteR__c +  Retailer_Shares_TF_Social_Media_PostsR__c +  Marketing_Materials_Positive_InfluenceR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Subtotal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>