unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Marketing_Total__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Total__c</fullName>
    <label>Marketing Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>