unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Materials_from_Tax_Free_Provider__c.field-meta.xml
<CustomField>
    <fullName>Materials_from_Tax_Free_Provider__c</fullName>
    <inlineHelpText>What kind of materials do you receive from your Tax-Free supplier?</inlineHelpText>
    <label>Materials from Tax Free Provider?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Point of Sale Leaflets</fullName>
            </value>
            <value>
                <fullName>Point of Sale Plexis</fullName>
            </value>
            <value>
                <fullName>Window Stickers</fullName>
            </value>
            <value>
                <fullName>Posters</fullName>
            </value>
            <value>
                <fullName>Dedicated Tax-Free Area/Lounge</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>