unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Materials_from_Tax_Free_ProviderR__c.field-meta.xml
<CustomField>
    <fullName>Materials_from_Tax_Free_ProviderR__c</fullName>
    <formula>IF(INCLUDES(Materials_from_Tax_Free_Provider__c, &quot;Point of Sale Leaflets&quot;), 1, 
IF(INCLUDES(Materials_from_Tax_Free_Provider__c, &quot;Point of Sale Plexis&quot;), 2, 
IF(INCLUDES(Materials_from_Tax_Free_Provider__c, &quot;Window Stickers&quot;), 1, 
IF(INCLUDES(Materials_from_Tax_Free_Provider__c, &quot;Posters&quot;), 3,
IF(INCLUDES(Materials_from_Tax_Free_Provider__c, &quot;Dedicated Tax-Free Area/Lounge&quot;), 5, 
IF(INCLUDES(Materials_from_Tax_Free_Provider__c, &quot;None&quot;), 0, 0))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Materials from Tax Free ProviderR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>