unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Monthly_Reports__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Reports__c</fullName>
    <inlineHelpText>Do you receive Monthly Reports providing macro trends and comparisons, as well as commentary and deeper insights into destination and source market trends?</inlineHelpText>
    <label>Monthly Reports?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>