unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Nature_of_Marketing_Support__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Marketing_Support__c</fullName>
    <inlineHelpText>What is the nature of the marketing support you get from your Tax Free provider?</inlineHelpText>
    <label>Nature of Marketing Support?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>