unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Nature_of_Marketing_SupportR__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Marketing_SupportR__c</fullName>
    <formula>IF(TEXT(Nature_of_Marketing_Support__c) = &quot;Full&quot;, 5, 
IF(TEXT(Nature_of_Marketing_Support__c) = &quot;Partial&quot;, 3, 
IF(TEXT(Nature_of_Marketing_Support__c) = &quot;Basic&quot;, 1, 
IF(TEXT(Nature_of_Marketing_Support__c) = &quot;None&quot;, 0, 0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nature of Marketing SupportR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>