unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/One_for_Each_Till_Point__c.field-meta.xml
<CustomField>
    <fullName>One_for_Each_Till_Point__c</fullName>
    <label>One for Each Till Point?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>