unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/One_for_Each_Till_PointR__c.field-meta.xml
<CustomField>
    <fullName>One_for_Each_Till_PointR__c</fullName>
    <formula>IF(TEXT(One_for_Each_Till_Point__c) = &quot;Yes&quot;, 5,
IF(TEXT(One_for_Each_Till_Point__c) = &quot;No&quot;, 0, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>One for Each Till PointR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>