unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Operating_SystemR__c.field-meta.xml
<CustomField>
    <fullName>Operating_SystemR__c</fullName>
    <formula>IF(TEXT(What_is_the_operating_system__c) = &quot;Windows&quot;, 1,
IF(TEXT(What_is_the_operating_system__c) = &quot;Unix&quot;, 2,
IF(TEXT(What_is_the_operating_system__c) = &quot;Linux&quot;, 2,
IF(TEXT(What_is_the_operating_system__c) = &quot;Android&quot;, 3,
IF(TEXT(What_is_the_operating_system__c) = &quot;iOS&quot;, 4,
IF(TEXT(What_is_the_operating_system__c) = &quot;Own System&quot;, 5,
IF(TEXT(What_is_the_operating_system__c) = &quot;None&quot;, 1, 0)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Operating SystemR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>