unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Diagnostic Questionnaires</relationshipLabel>
    <relationshipName>Diagnostic_Questionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>