unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Other_Info_on_Devices_Connected_to_Till__c.field-meta.xml
<CustomField>
    <fullName>Other_Info_on_Devices_Connected_to_Till__c</fullName>
    <label>Other Info on Devices Connected to Till?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>