unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Passport_Scanner_at_Till_Point__c.field-meta.xml
<CustomField>
    <fullName>Passport_Scanner_at_Till_Point__c</fullName>
    <label>Passport Scanner at Till Point?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>