unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Percent_of_Business_from_non_EU__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_Business_from_non_EU__c</fullName>
    <label>Percent of Business from non-EU?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5 or less</fullName>
            </value>
            <value>
                <fullName>Between 5 and 10</fullName>
            </value>
            <value>
                <fullName>Between 10 and 20</fullName>
            </value>
            <value>
                <fullName>Between 20 and 30</fullName>
            </value>
            <value>
                <fullName>More than 30</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>