unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/POS_Connected_Via_Eth_and_or_GPRS__c.field-meta.xml
<CustomField>
    <fullName>POS_Connected_Via_Eth_and_or_GPRS__c</fullName>
    <inlineHelpText>Are the POS terminals connected via Ethernet and/or GPRS?</inlineHelpText>
    <label>POS Connected Via Eth and/or GPRS?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>