unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/POS_Connected_Via_Eth_and_or_GPRSR__c.field-meta.xml
<CustomField>
    <fullName>POS_Connected_Via_Eth_and_or_GPRSR__c</fullName>
    <formula>IF(TEXT(POS_Connected_Via_Eth_and_or_GPRS__c) = &quot;Yes&quot;, 5, 
IF(TEXT(POS_Connected_Via_Eth_and_or_GPRS__c) = &quot;No&quot;, 0, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POS Connected Via Eth and/or GPRSR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>