unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Potential_Risk_Reports__c.field-meta.xml
<CustomField>
    <fullName>Potential_Risk_Reports__c</fullName>
    <inlineHelpText>Do they supply reports which allow you to mitigate any potential Risk?</inlineHelpText>
    <label>Potential Risk Reports?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>