unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Potential_Risk_ReportsR__c.field-meta.xml
<CustomField>
    <fullName>Potential_Risk_ReportsR__c</fullName>
    <formula>IF(TEXT(Potential_Risk_Reports__c) = &quot;Yes&quot;, 5, 
IF(TEXT(Potential_Risk_Reports__c) = &quot;No&quot;, 0, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Potential Risk ReportsR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>