unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Pre_arrange_High_Value_Cash_Refunds__c.field-meta.xml
<CustomField>
    <fullName>Pre_arrange_High_Value_Cash_Refunds__c</fullName>
    <inlineHelpText>Do they have to pre-arrange high value cash refunds?</inlineHelpText>
    <label>Pre-arrange High Value Cash Refunds?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>