unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Pre_Shopping_Journey__c.field-meta.xml
<CustomField>
    <fullName>Pre_Shopping_Journey__c</fullName>
    <inlineHelpText>Do your Touristic Customers enjoy a good &#39;Pre-Shopping Journey&#39; before visiting your store?</inlineHelpText>
    <label>Pre-Shopping Journey?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>