unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Pre_Shopping_JourneyR__c.field-meta.xml
<CustomField>
    <fullName>Pre_Shopping_JourneyR__c</fullName>
    <formula>IF(TEXT(Pre_Shopping_Journey__c) = &quot;Yes&quot;, 5, 
IF(TEXT(Pre_Shopping_Journey__c) = &quot;No&quot;, 0, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pre-Shopping JourneyR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>