unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Private_and_Public_WiFi_In_store__c.field-meta.xml
<CustomField>
    <fullName>Private_and_Public_WiFi_In_store__c</fullName>
    <inlineHelpText>Private and Public WiFi In-store Available?</inlineHelpText>
    <label>Private and Public WiFi In-store?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Public &amp; Private</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>