unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Problems_Issuing_Tax_Free_Forms__c.field-meta.xml
<CustomField>
    <fullName>Problems_Issuing_Tax_Free_Forms__c</fullName>
    <inlineHelpText>What kind of problems do you have issuing Tax Free forms?</inlineHelpText>
    <label>Problems Issuing Tax Free Forms?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>