unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Purchase_Amount_Auto_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Amount_Auto_Transfer__c</fullName>
    <inlineHelpText>Is the purchase amount being automatically transferred from the till system to the POS Terminal?</inlineHelpText>
    <label>Purchase Amount Auto Transfer?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>