unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Purchase_Amount_Auto_Transfer_R__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Amount_Auto_Transfer_R__c</fullName>
    <formula>IF(TEXT(Purchase_Amount_Auto_Transfer__c) = &quot;Yes&quot;, 5, 
IF(TEXT(Purchase_Amount_Auto_Transfer__c) = &quot;No&quot;, 0, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Amount Auto Transfer?R</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>